--- a/src/app/posts/edit-myprofile/edit-myprofile.component.html
+++ b/src/app/posts/edit-myprofile/edit-myprofile.component.html
@@ -26,11 +26,9 @@
   <!-- <img mat-card-image src="../../../assets/kristy.png" alt="Photo of a Shiba Inu"> -->
   <mat-card-content>
     <table
-    [ngClass]="
-      click
-        ? 'animate__animated animate__flash table table-hover'
-        : 'table table-hover'
-    "
+
+        class= "table table-hover"
+
   >
   <thead>
     <th>Title</th>
