--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -7,9 +7,9 @@
     </button>
    
   </div>
-  <div class="list-container"  >
+  <div class="list-container" *ngFor="let group of groupList" >
     <div class="display-flex justify-space-between">
-    <h4 style="color: white;" >Type1</h4>
+    <h4 style="color: white;" >{{group}}</h4>
     <button style="margin-bottom: 1%;" class="ui mini icon button" (click)="deleteGroup(group.groupList)">
       <i class="trash icon"></i>
     </button>
@@ -22,7 +22,7 @@
                   class="ui link cards example-card"
                   *ngFor="let post of posts" cdkDrag
                 >
-                  <div class="card task-card">
+                  <div class="card task-card" *ngIf="post.groupName == group">
                     <div class="content">
                       <img
                         class="right floated mini ui image"
@@ -80,46 +80,7 @@
                       </div>
                     </div>
                   </div>
-            
-                </div>
-            
-            <!-- <div class="ui link cards example-card " *ngFor="let post of posts" cdkDrag>
-              <div class="card task-card" *ngIf="post.groupName === 'Type1'">
-                <div class="content">
-                  <img class="right floated mini ui image" src="../../../assets/elliot.jpg" />
-                  <div class="card-header-actions right floated badge">
-                    <span [ngClass]="{
-                'badge-notstarted': post.status == 'NotStarted',
-                'badge-completed': post.status === 'Completed',
-                'badge-inprogress': post.status === 'In Progress'
-              }">1</span>
-                  </div>
-                  <div class="header">
-                     post.userName 
-                  </div>
-                  <div class="meta">
-                     post.title 
-                  </div>
-                  <div class="meta">
-                    post.time 
-                  </div>
-                  <div class="description display-flex justify-flex-end">
-                    post.content 
-                  </div>
-                </div>
-                <div class="extra content right floated ui">
-                  <div class="mini ui two buttons">
-                    <div class="ui basic green button" [routerLink]="['/posts/edit', post.id]">
-                      <i class="icon edit"></i>Edit
-                    </div>
-                    <div class="ui basic red button" (click)="onDelete(post.id)">
-                      <i class="icon trash">&nbsp; Delete</i>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div> -->
-          
+                </div>          
         </div>
         <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">
           No tasks added yet!
@@ -129,7 +90,7 @@
     
 
   </div>
-  <div class="list-container"  >
+  <!-- <div class="list-container"  >
     <div class="display-flex justify-space-between">
     <h4 style="color: white;" >Type2</h4>
     <button style="margin-bottom: 1%;" class="ui mini icon button" (click)="deleteGroup(group.groupList)">
@@ -219,7 +180,7 @@
                       </tr>
                     </tbody>
                   </table>
-                  <!-- <div class="meta">
+                  <div class="meta">
                     {{ post.tasks.title }}
                   </div>
                   <div class="meta">
@@ -227,7 +188,7 @@
                   </div>
                   <div class="description display-flex justify-flex-end">
                     {{ post.content }}
-                  </div> -->
+                  </div>
                 </div>
                 <div class="extra content right floated ui">
                   <div class="mini ui two buttons">
@@ -250,7 +211,7 @@
     </div>
     
 
-  </div>
+  </div> -->
 </div>
 
 
