--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -10,7 +10,7 @@
   <div class="list-container" *ngFor="let group of groupList" >
     <div class="display-flex justify-space-between">
     <h4 style="color: white;" >{{group}}</h4>
-    <button style="margin-bottom: 1%;" class="ui mini icon button" (click)="deleteGroup(group.groupList)">
+    <button style="margin-bottom: 1%;" class="ui mini icon button" (click)="deleteGroup(group)">
       <i class="trash icon"></i>
     </button>
     </div>
