--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -5,199 +5,71 @@
     <button class="ui icon button" (click)="addGroup('Create')">
       <i class="plus icon"></i>
     </button>
-   
+
   </div>
-  <div class="list-container" *ngFor="let group of groupList" >
+  <div class="list-container" *ngFor="let group of groupList">
     <div class="display-flex justify-space-between">
-    <h4 style="color: white;" >{{group}}</h4>
-    <button style="margin-bottom: 1%;" class="ui mini icon button" (click)="deleteGroup(group)">
-      <i class="trash icon"></i>
-    </button>
+      <h4 style="color: white;">{{group}}</h4>
+      <button style="margin-bottom: 1%;" class="ui mini icon button" (click)="deleteGroup(group)">
+        <i class="trash icon"></i>
+      </button>
     </div>
     <div class="todo-container column-container">
       <div class="list" cdkDropList #todoList="cdkDropList" [cdkDropListData]="posts"
         [cdkDropListConnectedTo]="[doneList]" (cdkDropListDropped)="onDrop($event)" cdkDropListOrientation="horizontal">
         <div *ngIf="posts.length > 0 && !isLoading" class="posts-list">
-                <div
-                  class="ui link cards example-card"
-                  *ngFor="let post of posts" cdkDrag
-                >
-                  <div class="card task-card" *ngIf="post.groupName == group">
-                    <div class="content">
-                      <img
-                        class="right floated mini ui image"
-                        src="../../../assets/elliot.jpg"
-                      />
-                      <div class="card-header-actions right floated badge">
-                        <span
-                          [ngClass]="{
+          <div class="ui link cards example-card" *ngFor="let post of posts" cdkDrag>
+            <div class="card task-card" *ngIf="post.groupName == group">
+              <div class="content">
+                <img class="right floated mini ui image" src="../../../assets/elliot.jpg" />
+                <div class="card-header-actions right floated badge">
+                  <span [ngClass]="{
                             'badge-notstarted': post.status == 'NotStarted',
                             'badge-completed': post.status === 'Completed',
                             'badge-inprogress': post.status === 'In Progress'
-                          }"
-                          >{{ post.status }}</span
-                        >
-                      </div>
-                      <div class="header ">
-                        {{ post.userName }}
-                      </div>
-                      <table class="ui very basic collapsing celled table">
-                        <thead>
-                          <tr><th>Title</th>
-                          <th>Description</th>
-                          <th>Time</th>
-                          <th>Status</th>
-                        </tr></thead>
-                        <tbody>
-                          <tr *ngFor="let task of post.tasks">
-                            <td>
-                              <h4 class="ui image header">
-                                <div class="content">
-                                  {{task.title}}
-                              </div>
-                            </h4></td>
-                            <td>
-                              {{task.content}}
-                            </td>
-                            <td>
-                              {{task.time}}
-                            </td>
-                            <td>
-                              {{task.status}}
-                            </td>
-                          </tr>                         
-                        </tbody>
-                      </table>
-                    </div>
-                    <div class="extra content right floated ui">
-                      <div class="mini ui two buttons">
-                        <div class="ui basic green button" [routerLink]="['/posts/edit', post._id]">
-                          <i class="icon edit"></i>Edit
-                        </div>
-                        <div class="ui basic red button" (click)="onDelete(post._id)">
-                          <i class="icon trash">&nbsp; Delete</i>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>          
-        </div>
-        <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">
-          No tasks added yet!
-        </p>
-      </div>
-    </div>
-    
-
-  </div>
-  <!-- <div class="list-container"  >
-    <div class="display-flex justify-space-between">
-    <h4 style="color: white;" >Type2</h4>
-    <button style="margin-bottom: 1%;" class="ui mini icon button" (click)="deleteGroup(group.groupList)">
-      <i class="trash icon"></i>
-    </button>
-    </div>
-    <div class="todo-container column-container">
-      <div class="list" cdkDropList #doneList="cdkDropList" [cdkDropListData]="type2List"
-        [cdkDropListConnectedTo]="[todoList]" (cdkDropListDropped)="onDrop($event)" cdkDropListOrientation="horizontal">
-        <div *ngIf="type2List.length > 0 && !isLoading" class="posts-list">
-          <div class="row">
-            <div class="ui link cards example-card " *ngFor="let post of type2List" cdkDrag>
-              <div class="card task-card" *ngIf="post.groupName === 'Type2'">
-                <div class="content">
-                  <img class="right floated mini ui image" src="../../../assets/elliot.jpg" />
-                  <div class="card-header-actions right floated badge">
-                    <span [ngClass]="{
-                'badge-notstarted': post.status == 'NotStarted',
-                'badge-completed': post.status === 'Completed',
-                'badge-inprogress': post.status === 'In Progress'
-              }">1</span>
-                  </div>
-                  <div class="header">
-                    {{ post.userName }}
-                  </div>
-                  <table class="ui very basic collapsing celled table">
-                    <thead>
-                      <tr><th>Employee</th>
-                      <th>Correct Guesses</th>
-                    </tr></thead>
-                    <tbody>
-                      <tr>
-                        <td>
-                          <h4 class="ui image header">
-                            <img src="/images/avatar2/small/lena.png" class="ui mini rounded image">
-                            <div class="content">
-                              Lena
-                              <div class="sub header">Human Resources
-                            </div>
-                          </div>
-                        </h4></td>
-                        <td>
-                          22
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <h4 class="ui image header">
-                            <img src="/images/avatar2/small/matthew.png" class="ui mini rounded image">
-                            <div class="content">
-                              Matthew
-                              <div class="sub header">Fabric Design
-                            </div>
-                          </div>
-                        </h4></td>
-                        <td>
-                          15
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <h4 class="ui image header">
-                            <img src="/images/avatar2/small/lindsay.png" class="ui mini rounded image">
-                            <div class="content">
-                              Lindsay
-                              <div class="sub header">Entertainment
-                            </div>
-                          </div>
-                        </h4></td>
-                        <td>
-                          12
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <h4 class="ui image header">
-                            <img src="/images/avatar2/small/mark.png" class="ui mini rounded image">
-                            <div class="content">
-                              Mark
-                              <div class="sub header">Executive
-                            </div>
-                          </div>
-                        </h4></td>
-                        <td>
-                          11
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                  <div class="meta">
-                    {{ post.tasks.title }}
-                  </div>
-                  <div class="meta">
-                    {{ post.time }}
-                  </div>
-                  <div class="description display-flex justify-flex-end">
-                    {{ post.content }}
-                  </div>
+                          }">{{ post.status }}</span>
                 </div>
-                <div class="extra content right floated ui">
-                  <div class="mini ui two buttons">
-                    <div class="ui basic green button" [routerLink]="['/posts/edit', post.id]">
-                      <i class="icon edit"></i>Edit
-                    </div>
-                    <div class="ui basic red button" (click)="onDelete(post.id)">
-                      <i class="icon trash">&nbsp; Delete</i>
-                    </div>
+                <div class="header ">
+                  {{ post.userName }}
+                </div>
+                <table class="ui very basic collapsing celled table">
+                  <thead>
+                    <tr>
+                      <th>Title</th>
+                      <th>Description</th>
+                      <th>Time</th>
+                      <th>Status</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let task of post.tasks">
+                      <td>
+                        <h4 class="ui image header">
+                          <div class="content">
+                            {{task.title}}
+                          </div>
+                        </h4>
+                      </td>
+                      <td>
+                        {{task.content}}
+                      </td>
+                      <td>
+                        {{task.time}}
+                      </td>
+                      <td>
+                        {{task.status}}
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="extra content right floated ui">
+                <div class="mini ui two buttons">
+                  <div class="ui basic green button" [routerLink]="['/posts/edit', post._id]">
+                    <i class="icon edit"></i>Edit
+                  </div>
+                  <div class="ui basic red button" (click)="onDelete(post._id)">
+                    <i class="icon trash">&nbsp; Delete</i>
                   </div>
                 </div>
               </div>
@@ -209,24 +81,24 @@
         </p>
       </div>
     </div>
-    
 
-  </div> -->
+
+  </div>
 </div>
 
 
-<div>
+<!-- <div>
   <app-paginator></app-paginator>
-</div>
+</div> -->
 
-  <div [ngClass]="
+<div [ngClass]="
 showModal
   ? 'ui active modal scale animate__animated animate__backInUp'
   : 'ui modal animate__animated animate__backOutDown'
 " class="ui modal">
-    
-    <div class="new-group-box">
-      <i class="close icon" (click)="close()"></i>
+
+  <div class="new-group-box">
+    <i class="close icon" (click)="close()"></i>
     <div class="header header-post">
       {{action}} Group
     </div>
@@ -246,14 +118,14 @@ showModal
         <div class="ui red deny button small" (click)="close()">
           Cancel
         </div>
-        <div class="ui positive icon button small" *ngIf="action === 'Create'"  (click)="createGroup(groupName)">
+        <div class="ui positive icon button small" *ngIf="action === 'Create'" (click)="createGroup(groupName)">
           {{action}}
         </div>
         <div class="ui positive icon button small" *ngIf="action === 'Delete'" (click)="deleteGroup(groupName)">
           {{action}}
         </div>
-        
+
       </div>
     </form>
-    </div>
   </div>
+</div>
