--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -17,7 +17,7 @@
       <input
         matInput
         name="description"
-        [ngModel]="post?.content"
+        [ngModel]="post?.description"
         type="text"
         placeholder="Task description"
         #description="ngModel"
@@ -53,20 +53,6 @@
         <mat-option value="Completed">Completed</mat-option>
       </mat-select>
     </mat-form-field>
-    <mat-form-field>
-      <mat-label>Select a Group</mat-label>
-      <mat-select
-        [ngModel]="post?.groupName"
-        name="groupName"
-        #groupName="ngModel"
-        required
-        [(value)]="groupSelected"
-      >
-      <mat-option value="Other" selected>Other</mat-option>
-      <mat-option *ngFor="let group of groupList" value={{group.groupList}}>{{group.groupList}}</mat-option>
-      </mat-select>
-    </mat-form-field>
-
     <!-- <div class="pick-image">
       <button mat-stroked-button type="button" (click)="filePicker.click()">
         Pick Image
