Phase 2 Done wth delete

--- a/src/app/posts/my-tasks/my-tasks.component.html
+++ b/src/app/posts/my-tasks/my-tasks.component.html
@@ -1,11 +1,5 @@
 <div class="container">
     <div class="row">
-      <!-- <div class="display-flex justify-space-between">
-        <h4 style="color: white;">{{group}}</h4>
-        <button style="margin-bottom: 1%;" class="ui mini icon button" (click)="deleteGroup(group)">
-          <i class="trash icon"></i>
-        </button>
-      </div> -->
           <div *ngIf="posts.length > 0 && !isLoading" class="posts-list col-lg-4 col-md-3 col-sm-6" >
             <div class="ui link cards example-card" *ngFor="let post of posts" cdkDrag>
               <div class="card task-card" >
@@ -21,36 +15,6 @@
                   <div class="header ">
                     {{ post.title }}
                   </div>
-                  <!-- <table class="ui very basic collapsing celled table">
-                    <thead>
-                      <tr>
-                        <th>Title</th>
-                        <th>Description</th>
-                        <th>Time</th>
-                        <th>Status</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr >
-                        <td>
-                          <h4 class="ui image header">
-                            <div class="content">
-                              {{post.title}}
-                            </div>
-                          </h4>
-                        </td>
-                        <td>
-                          {{post.content}}
-                        </td>
-                        <td>
-                          {{post.time}}
-                        </td>
-                        <td>
-                          {{post.status}}
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table> -->
                   <table class="ui very basic collapsing celled table">
                     <thead>
                       <tr><th>About</th>
@@ -114,7 +78,7 @@
                     <div class="ui basic green button" [routerLink]="['/posts/editMypost', post._id]">
                       <i class="icon edit"></i>Edit
                     </div>
-                    <div class="ui basic red button" (click)="onDelete(post._id)">
+                    <div class="ui basic red button" (click)="onDelete(post.title)">
                       <i class="icon trash">&nbsp; Delete</i>
                     </div>
                   </div>
