UI change for my tasks card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar class="header-navigation">
+  <!-- <img class="logo-img" src="../../assets/logoOrg.PNG" alt="logo" /> -->
   <span>
     <a class="logo-name" mat-button routerLink="/">Web App</a>
   </span>
@@ -27,6 +28,14 @@
         >Signup</a
       >
     </li>
+    <!-- <li *ngIf="userIsAuthenticated">
+      <button class="logout" mat-button (click)="onLogout()">Logout</button>
+    </li> -->
+    <!-- <li *ngIf="userIsAuthenticated">
+      <a mat-button routerLink="/auth/signup" routerLinkActive="mat-accent"
+        ><i class="fas fa-bell"></i>&nbsp; Notifications</a
+      >
+    </li> -->
     <li *ngIf="userIsAuthenticated">
       <a mat-button routerLink="/posts/mytask" routerLinkActive="mat-accent"
         ><i class="fas fa-list"></i> &nbsp;My Tasks</a
@@ -63,3 +72,4 @@
   </mat-sidenav-content>
 </mat-sidenav-container>
 
+<!-- <app-error *ngIf="hasError"></app-error> -->
