--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -51,7 +51,8 @@ body {
   padding: 0% 3% 3% 3%;
   border-radius: 2px;
   display: flex;
-  margin: auto;
+  margin: 0;
+  width: 100%;
 }
 .mat-select-value {
   color: white !important;
@@ -270,4 +271,9 @@ a {
     width: 50%;
     margin-left: 30%;
     padding: 2%;
+}
+
+.card.task-card{
+  width: 100%;
+  max-width: 500px;
 }
