--- a/src/app/posts/edit-myprofile/edit-myprofile.component.html
+++ b/src/app/posts/edit-myprofile/edit-myprofile.component.html
@@ -3,32 +3,42 @@
     <img mat-card-avatar class="example-header-image" src="../../../assets/kristy.png">
     <div class="edit-myprofile">
       <div>
-    <mat-card-title>{{Name}}</mat-card-title>
+        <mat-card-title>{{Name}}</mat-card-title>
+      </div>
+      <div>
+        <mat-card-subtitle>
+
+          <mat-label>Update Group</mat-label>
+          <mat-select [(value)]="groupName">
+            <mat-option *ngFor="let group of groupList" value={{group.groupList}}>{{group.groupList}}</mat-option>
+          </mat-select>
+        </mat-card-subtitle>
+      </div>
+
+      <div>
+        <button mat-raised-button (click)="UpdateDetails()" color="accent">Update</button>
+      </div>
     </div>
-    <div>
-    <mat-card-subtitle>
-      
-      <mat-label>Update Group</mat-label>
-      <mat-select
-      [(value)]="groupName" 
-      >
-      <mat-option *ngFor="let group of groupList" value={{group.groupList}}>{{group.groupList}}</mat-option>
-      </mat-select>
-    </mat-card-subtitle>
-    </div>
-  
-  <div>
-    <button mat-raised-button (click)="UpdateDetails()" color="accent">Update</button>
-  </div>
-</div>
   </mat-card-header>
- 
-    </tbody>
-  </table>
+  <mat-card-content>
+    <table class="table table-hover">
+      <thead>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Time</th>
+        <th>Status</th>
+      </thead>
+      <tbody>
+        <tr *ngFor="let task of tasks">
+          <td>{{task.title}}</td>
+          <td>{{task.content}}</td>
+          <td>{{task.time}}</td>
+          <td>{{task.status}}</td>
+        </tr>
+
+
+      </tbody>
+    </table>
   </mat-card-content>
- 
+
 </mat-card>
-
-
-
-  
