--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -14,10 +14,13 @@
         <i class="trash icon"></i>
       </button>
     </div>
-    <div class="todo-container column-container">
-      <div class="list" cdkDropList #todoList="cdkDropList" [cdkDropListData]="posts"
-        [cdkDropListConnectedTo]="[doneList]" (cdkDropListDropped)="onDrop($event)" cdkDropListOrientation="horizontal">
+    <!-- <div class="todo-container column-container"> -->
+      <!-- <div class="list" cdkDropList #todoList="cdkDropList" [cdkDropListData]="posts"
+        [cdkDropListConnectedTo]="[doneList]" (cdkDropListDropped)="onDrop($event)" cdkDropListOrientation="horizontal"> -->
         <div *ngIf="posts.length > 0 && !isLoading" class="posts-list">
+          <div class="container">
+          <div class="row">
+            <div class="col-lg-10 col-md-5 col-sm-8">
           <div class="ui link cards example-card" *ngFor="let post of posts" cdkDrag>
             <div class="card task-card" *ngIf="post.groupName == group">
               <div class="content">
@@ -33,7 +36,7 @@
                 <div class="header ">
                   {{ post.userName }}
                 </div>
-                <table class="ui very basic collapsing celled table">
+                <table class="ui fixed single line celled table">
                   <thead>
                     <tr>
                       <th>Title</th>
@@ -52,7 +55,9 @@
                         </h4>
                       </td>
                       <td>
+                        
                         {{task.content}}
+                        
                       </td>
                       <td>
                         {{task.time}}
@@ -69,19 +74,22 @@
                   <div class="ui basic green button" [routerLink]="['/posts/edit', post._id]">
                     <i class="icon edit"></i>Edit
                   </div>
-                  <div class="ui basic red button" (click)="onDelete(post._id)">
+                  <!-- <div class="ui basic red button" (click)="onDelete(post._id)">
                     <i class="icon trash">&nbsp; Delete</i>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
           </div>
         </div>
+        </div>
+      </div>
+        </div>
         <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">
           No tasks added yet!
         </p>
-      </div>
-    </div>
+      
+    <!-- </div> -->
 
 
   </div>
