My tasks profle image

--- a/src/app/posts/my-tasks/my-tasks.component.html
+++ b/src/app/posts/my-tasks/my-tasks.component.html
@@ -7,7 +7,7 @@
               
               <div class="card task-card " >
                 <div class="content">
-                  <img class="right floated mini ui image" src="../../../assets/elliot.jpg" />
+                  <img class="right floated mini ui image" [src]="'../../../assets/' +myProfile" />
                   <!-- <div class="card-header-actions right floated badge">
                     <span [ngClass]="{
                               'badge-notstarted': post.status == 'NotStarted',
